dark mode text fixed on link preview

--- a/public/css/communities.css
+++ b/public/css/communities.css
@@ -18,6 +18,7 @@
   --dark-mode-button-hover-color: #363F44;
   --dark-mode-lighter-color: #1F2427;
   --dark-mode-text-color: #fff;
+  --dark-mode-secondary-text-color: #999;
   --dark-mode-border-color: #272D31;
   --dark-mode-hover-background-color: #444;
 }
@@ -1044,7 +1045,7 @@ div .mini-link-desc {
   }
 
   #secondary-text {
-    color: var(--dark-mode-lighter-color);
+    color: var(--dark-mode-secondary-text-color);
   }
 
   #main-text {
