--- a/public/css/post.css
+++ b/public/css/post.css
@@ -13,6 +13,7 @@
   --dark-mode-main-color: #16191B;
   --dark-mode-body-color: #000;
   --dark-mode-lighter-color: #0a0a0a;
+  --dark-mode-secondary-text-color: #999;
   --dark-mode-text-color: #fff;
   --dark-mode-border-color: #272D31;
   --dark-mode-hover-background-color: #444;
